# keira

./: .clang-format  .clang-format-ignore  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml  rustfmt.toml
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
arch/x86/: linker.ld
arch/x86/boot/: entry32.asm  entry64.asm  multiboot2_header.asm
arch/x86/kernel/: gdt.asm  hw_init.c  idt.asm  idt.c  isr.asm  paging.asm  pic.c  pit.c  syscall.asm
docs/: README.md
docs/architecture/: README.md  bootstrapping.md  file_locking.md  interrupts.md  kcc.md  memory.md  scheduler.md  syscalls.md
docs/development/: README.md  building.md  debugging.md  new_command.md  user_apps.md
docs/shell/: README.md  editor.md  loop.md  sound.md  themes.md
docs/storage/: README.md  block.md  fat16.md  initrd.md  pci_ahci.md
drivers/keyboard/: keyboard.c  scancodes.h
drivers/keyboard/include/: keyboard.h
drivers/mouse/: mouse.c  regs.h
drivers/mouse/include/: mouse.h
drivers/rtc/: regs.h  rtc.c
drivers/rtc/include/: rtc.h
drivers/serial/: regs.h  serial.c
drivers/sound/: hda.c  regs.h  sound.c
drivers/sound/include/: hda.h  (+1 more)
drivers/vga/: vga.c
include/keira/: heap.h
kernel/src/: entry.rs  fs.rs  io.rs  lib.rs  mem.rs  panic.rs  shell.rs  syscall.rs  task.rs
mm/heap/: heap.c
targets/: x86_64-keira-none.json
user/: linker.ld
user/lib/: malloc.c  stdio.c  string.c  syscall.c
(+89 files in other folders)
